--- a/src/BSOD/components/DeathScreen.less
+++ b/src/BSOD/components/DeathScreen.less
@@ -30,6 +30,7 @@
   &__inner {
     position: absolute;
     inset: 0;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
